--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -645,5 +645,15 @@
     <color name="color_21283A">#21283A</color>
     <color name="color_1A2334">#1A2334</color>
     <color name="color_283042">#283042</color>
+    <color name="color_1A2C38">#1A2C38</color>
+    <color name="color_CC0F212E">#CC0F212E</color>
+    <color name="color_CC213643">#CC213643</color>
+    <color name="color_213743">#213743</color>
+    <color name="color_071824">#071824</color>
+    <color name="color_638095">#638095</color>
+    <color name="color_B1BAD3">#B1BAD3</color>
+    <color name="color_0F212E">#0F212E</color>
+    <color name="color_2F4553">#2F4553</color>
+    <color name="color_213643">#213643</color>
 
 </resources>
