--- a/app/src/main/res/drawable/bg_circle_stroke_team_log_dark.xml
+++ b/app/src/main/res/drawable/bg_circle_stroke_team_log_dark.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#212E46"/>
+    <solid android:color="#2F4553"/>
     <stroke
-        android:color="#3F485D"
+        android:color="#69808F"
         android:width="@dimen/margin_0.5" />
 </shape>
