--- a/app/src/main/res/drawable/bg_radius_8_button_blue_dark.xml
+++ b/app/src/main/res/drawable/bg_radius_8_button_blue_dark.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_2F4553" />
-    <corners android:radius="6dp" />
+    <corners android:radius="8dp" />
+    <solid android:color="@color/color_2563D3" />
 </shape>
