--- a/app/src/main/res/drawable/bg_radius_8_button_gray_dark_stroke.xml
+++ b/app/src/main/res/drawable/bg_radius_8_button_gray_dark_stroke.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_0F212E" />
     <corners android:radius="8dp" />
-    <stroke android:width="@dimen/margin_0.5" android:color="@color/color_071824"/>
+    <solid android:color="@color/color_CC213643" />
+    <stroke android:width="@dimen/margin_0.5" android:color="@color/color_FFFFFF"/>
 </shape>
