--- a/app/src/main/res/drawable/selector_radio_blue_dark.xml
+++ b/app/src/main/res/drawable/selector_radio_blue_dark.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/bg_radius_18_button_blue_dark" android:state_checked="true"/>
-    <item android:drawable="@color/transparent" android:state_checked="true"/>
+    <item android:drawable="@drawable/bg_radius_8_button_blue_dark" android:state_checked="true"/>
+    <item android:drawable="@drawable/bg_radius_8_button_gray_dark_stroke" android:state_checked="false"/>
 </selector>
