--- a/app/src/main/res/layout/activity_endcard.xml
+++ b/app/src/main/res/layout/activity_endcard.xml
@@ -32,7 +32,7 @@
         android:paddingHorizontal="5dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:background="@color/color_181d28">
+        android:background="@drawable/bg_endcard_bottom">
 
         <LinearLayout
             android:id="@+id/llCasino"
