--- a/app/src/main/res/layout/fragment_endcard_record.xml
+++ b/app/src/main/res/layout/fragment_endcard_record.xml
@@ -8,18 +8,16 @@
     android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
-       android:layout_height="100dp"
+       android:layout_height="wrap_content"
        android:background="@drawable/bg_endcard_banner">
      <RadioGroup
          android:id="@+id/rgTab"
          android:layout_width="200dp"
-         android:layout_height="44dp"
-         android:padding="4dp"
+         android:layout_height="@dimen/margin_36"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          android:layout_marginRight="@dimen/margin_12"
-         android:layout_gravity="center_vertical|right"
-         android:background="@drawable/bg_radio_stroke">
+         android:layout_gravity="center_vertical|right">
        <RadioButton
            android:id="@+id/rbtnSettled"
            android:layout_width="0dp"
@@ -29,18 +27,19 @@
            android:background="@drawable/selector_radio_blue_dark"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
-           android:textColor="@color/color_date_gray_white"
+           android:textColor="@color/color_FFFFFF"
            android:text="@string/H021"/>
          <RadioButton
              android:id="@+id/rbtnUnSettle"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
+             android:layout_marginLeft="@dimen/margin_8"
              android:button="@null"
              android:background="@drawable/selector_radio_blue_dark"
              android:gravity="center"
              android:textSize="@dimen/sp_14"
-             android:textColor="@color/color_date_gray_white"
+             android:textColor="@color/color_FFFFFF"
              android:text="@string/H009"/>
      </RadioGroup>
    </FrameLayout>
