--- a/app/src/main/res/layout/fragment_endcard_unsettled_record.xml
+++ b/app/src/main/res/layout/fragment_endcard_unsettled_record.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_0E131F"
+    android:background="@color/color_1A2C38"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
