--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -654,5 +654,7 @@
     <color name="color_A78031">#A78031</color>
     <color name="color_FFB828">#FFB828</color>
     <color name="color_FF7676">#FF7676</color>
+    <color name="color_404C71">#404C71</color>
+    <color name="color_e3e5e9">#e3e5e9</color>
 
 </resources>
