--- a/app/src/main/res/layout/activity_vip_benefits.xml
+++ b/app/src/main/res/layout/activity_vip_benefits.xml
@@ -109,7 +109,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
-                android:paddingStart="2dp" />
+                android:paddingStart="2dp"
+                android:paddingEnd="12dp"/>
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
