--- a/app/src/main/res/layout/item_vip_card.xml
+++ b/app/src/main/res/layout/item_vip_card.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card"
@@ -11,7 +12,68 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="14dp"
-        android:background="@drawable/img_vip_card_0">
+        android:background="@drawable/bg_vip0">
+
+        <TextView
+            android:id="@+id/tvLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="27dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/helvetica_bold"
+            android:textColor="@color/color_0D2245"
+            android:textSize="28sp"
+            tools:text="VIP 4"/>
+
+        <TextView
+            android:id="@+id/tvDescribe"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/tvLevel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="123dp"
+            android:maxLines="2"
+            android:fontFamily="@font/helvetica_normal"
+            android:textSize="11sp"
+            android:textColor="@color/color_6D7693"
+            tools:text="Ang halaga ng paglago ay binabayaran sa 15:50 araw-araw"/>
+        
+        <TextView
+            android:id="@+id/tvNextLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="27dp"
+            android:fontFamily="@font/helvetica_bold"
+            android:textColor="@color/color_0D2245"
+            android:textSize="16sp"
+            tools:text="VIP 5"/>
+
+        <org.cxct.sportlottery.ui.profileCenter.vip.view.VipProgressView
+            android:id="@+id/vipProgressView"
+            android:layout_width="282dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/tvNextLevel"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="5dp"/>
+
+        <TextView
+            android:id="@+id/tvPercent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="6dp"
+            android:paddingHorizontal="6dp"
+            android:textSize="12sp"
+            tools:text="600/1000"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     
