--- a/app/src/main/res/layout/view_vip_progress.xml
+++ b/app/src/main/res/layout/view_vip_progress.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:parentTag="LinearLayout">
+
     <TextView
         android:id="@+id/tvProgress"
         android:layout_width="44dp"
@@ -13,6 +16,7 @@
         android:textStyle="bold"
         android:textSize="@dimen/textSize12sp"
         android:text="0%"/>
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
@@ -20,12 +24,14 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_marginHorizontal="20dp"
         android:progressDrawable="@drawable/progress_vip"
+        android:indeterminateDrawable="@drawable/circle_yellow"
         android:progress="0"/>
+
     <ImageView
         android:id="@+id/ivThumb"
         android:layout_width="@dimen/margin_10"
         android:layout_height="@dimen/margin_10"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="-7dp"
-        android:src="@drawable/circle_yellow"/>
-</LinearLayout>
+        android:background="@drawable/circle_yellow"/>
+</merge>
