--- a/app/src/main/res/layout/dialog_endcard_bet_success.xml
+++ b/app/src/main/res/layout/dialog_endcard_bet_success.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="16dp"
-    app:cardBackgroundColor="@color/color_1A202E">
+    app:cardBackgroundColor="@color/color_1B2E39">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
                     android:ellipsize="end"
                     android:lines="1"
                     android:text="@string/P316"
-                    android:textColor="@color/color_BEC7DC"
+                    android:textColor="@color/color_B1BAD3"
                     android:textSize="@dimen/textSize12sp" />
 
                 <androidx.legacy.widget.Space
@@ -79,7 +79,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_0.5"
-                android:background="@color/color_0E131F"/>
+                android:background="@color/color_0C121E"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_40"
@@ -90,7 +90,7 @@
                     android:lines="1"
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize12sp"
-                    android:textColor="@color/color_BEC7DC"
+                    android:textColor="@color/color_B1BAD3"
                     android:text="@string/P317"/>
                 <androidx.legacy.widget.Space
                     android:layout_width="0dp"
@@ -134,7 +134,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_0.5"
-                android:background="@color/color_0E131F"/>
+                android:background="@color/color_0C121E"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_40"
@@ -145,7 +145,7 @@
                     android:lines="1"
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize12sp"
-                    android:textColor="@color/color_BEC7DC"
+                    android:textColor="@color/color_B1BAD3"
                     android:text="@string/I039"/>
                 <TextView
                     android:id="@+id/tvBettingTime"
@@ -163,7 +163,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_0.5"
-                android:background="@color/color_0E131F"/>
+                android:background="@color/color_0C121E"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_40"
@@ -174,7 +174,7 @@
                     android:lines="1"
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize12sp"
-                    android:textColor="@color/color_BEC7DC"
+                    android:textColor="@color/color_B1BAD3"
                     android:text="Bet"/>
                 <TextView
                     android:id="@+id/tvBet"
@@ -192,7 +192,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_0.5"
-                android:background="@color/color_0E131F"/>
+                android:background="@color/color_0C121E"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_40"
@@ -203,7 +203,7 @@
                     android:lines="1"
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize12sp"
-                    android:textColor="@color/color_BEC7DC"
+                    android:textColor="@color/color_B1BAD3"
                     android:text="@string/LT042"/>
                 <TextView
                     android:id="@+id/tvBetAmount"
@@ -221,7 +221,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_0.5"
-                android:background="@color/color_0E131F"/>
+                android:background="@color/color_0C121E"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_40"
@@ -232,7 +232,7 @@
                     android:lines="1"
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize12sp"
-                    android:textColor="@color/color_BEC7DC"
+                    android:textColor="@color/color_B1BAD3"
                     android:text="@string/N142"/>
                 <TextView
                     android:id="@+id/tvOrderNumber"
@@ -256,7 +256,7 @@
             android:layout_marginHorizontal="@dimen/margin_12"
             android:layout_marginTop="@dimen/margin_24"
             android:layout_marginBottom="@dimen/margin_28"
-            android:background="@drawable/selector_button_default"
+            android:background="@drawable/selector_button_default_darkblue"
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_FFFFFF"
             android:text="@string/P324"/>
