--- a/app/src/main/res/drawable/bg_darkblue_stroke_radius_8.xml
+++ b/app/src/main/res/drawable/bg_darkblue_stroke_radius_8.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" />
-    <stroke android:width="@dimen/margin_1" android:color="@color/color_314363"/>
+    <stroke android:width="@dimen/margin_0.5" android:color="@color/color_0C121E"/>
 </shape>
