--- a/app/src/main/res/layout/dialog_endcard_bet_fail.xml
+++ b/app/src/main/res/layout/dialog_endcard_bet_fail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="16dp"
-    app:cardBackgroundColor="@color/color_1A202E">
+    app:cardBackgroundColor="@color/color_1B2E39">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             android:layout_marginHorizontal="@dimen/margin_12"
             android:layout_marginTop="@dimen/margin_24"
             android:layout_marginBottom="@dimen/margin_28"
-            android:background="@drawable/selector_button_default"
+            android:background="@drawable/selector_button_default_darkblue"
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_FFFFFF"
             android:text="@string/P065"/>
