--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/color_1A2C38">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +34,7 @@
                 android:layout_marginStart="4dp"
                 android:gravity="center_vertical"
                 android:text="@string/P304"
+                android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/ivBack"
@@ -47,16 +48,21 @@
                 android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/ivBack" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcvBetAmount"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:paddingStart="4dp"
-                android:paddingEnd="12dp"
+                android:layout_height="@dimen/margin_50"
+                android:layout_marginHorizontal="@dimen/margin_12"
+                android:paddingLeft="@dimen/margin_4"
+                app:cardCornerRadius="@dimen/margin_25"
+                app:cardBackgroundColor="@color/color_0F212E"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+                app:layout_constraintTop_toBottomOf="@+id/ivBack">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcvBetAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/margin_40"
+                    android:layout_marginVertical="@dimen/margin_5"/>
+            </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.core.widget.NestedScrollView
@@ -70,17 +76,17 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clMatchInfo"
                     android:layout_width="match_parent"
-                    android:layout_height="124dp"
-                    android:paddingHorizontal="12dp"
-                    android:paddingTop="12dp"
-                    tools:background="@drawable/bg_viewcard_top">
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    tools:background="@color/color_213643">
 
                     <TextView
                         android:id="@+id/tvTime"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/margin_24"
                         android:paddingHorizontal="6dp"
-                        android:paddingVertical="3dp"
+                        android:gravity="center"
+                        android:background="@drawable/bg_darkblue_radius_8_2a4655"
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +98,7 @@
                         android:id="@+id/ivHomeLogo"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
-                        android:layout_marginTop="11dp"
+                        android:layout_marginTop="17dp"
                         android:background="@drawable/bg_circle_stroke_team_log_dark"
                         android:padding="2dp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +114,7 @@
                         android:maxLines="1"
                         android:textColor="@color/color_BEC7DC"
                         android:textSize="14sp"
-                        app:layout_constraintEnd_toStartOf="@+id/sections"
+                        app:layout_constraintEnd_toStartOf="@+id/linSection"
                         app:layout_constraintStart_toEndOf="@+id/ivHomeLogo"
                         app:layout_constraintTop_toTopOf="@+id/ivHomeLogo"
                         tools:text="bulls" />
@@ -117,7 +123,7 @@
                         android:id="@+id/ivAwayLogo"
                         android:layout_width="28dp"
                         android:layout_height="28dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="16dp"
                         android:background="@drawable/bg_circle_stroke_team_log_dark"
                         android:padding="2dp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -133,18 +139,37 @@
                         android:maxLines="1"
                         android:textColor="@color/color_BEC7DC"
                         android:textSize="14sp"
-                        app:layout_constraintEnd_toStartOf="@+id/sections"
+                        app:layout_constraintEnd_toStartOf="@+id/linSection"
                         app:layout_constraintStart_toEndOf="@+id/ivAwayLogo"
                         app:layout_constraintTop_toTopOf="@+id/ivAwayLogo"
                         tools:text="bulls" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/sections"
-                        android:layout_width="140dp"
-                        android:layout_height="100dp"
+                    <LinearLayout
+                        android:id="@+id/linSection"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:background="@drawable/bg_darkblue_radius_8_2a4655"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
-
+                        <TextView
+                            android:id="@+id/tvWinQuestion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/margin_28"
+                            android:paddingHorizontal="@dimen/margin_12"
+                            android:gravity="center_vertical"
+                            android:drawableRight="@drawable/ic_question_darkblue"
+                            android:drawablePadding="6dp"
+                            android:textStyle="bold"
+                            android:textSize="@dimen/textSize14sp"
+                            android:textColor="@color/color_FFFFFF"
+                            android:text="@string/win"/>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/sections"
+                        android:layout_width="160dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/bg_darkblue_radius_8_233e4a">
                         <TextView
                             android:layout_width="50dp"
                             android:layout_height="25dp"
@@ -239,49 +264,48 @@
 
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="1dp"
+                            android:layout_height="@dimen/margin_0.5"
                             android:layout_marginTop="25dp"
-                            android:background="@color/color_1A202E"
+                            android:background="@color/color_0C121E"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="1dp"
+                            android:layout_height="@dimen/margin_0.5"
                             android:layout_marginTop="50dp"
-                            android:background="@color/color_1A202E"
+                            android:background="@color/color_0C121E"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <View
                             android:layout_width="match_parent"
-                            android:layout_height="1dp"
+                            android:layout_height="@dimen/margin_0.5"
                             android:layout_marginTop="75dp"
-                            android:background="@color/color_1A202E"
+                            android:background="@color/color_0C121E"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <View
-                            android:layout_width="1dp"
+                            android:layout_width="@dimen/margin_0.5"
                             android:layout_height="match_parent"
                             android:layout_marginStart="50dp"
-                            android:background="@color/color_1A202E"
+                            android:background="@color/color_0C121E"
                             app:layout_constraintStart_toStartOf="parent" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
+                    </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/black"/>
+                    android:layout_height="8dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcvOddsList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/color_1A202E"
-                    android:paddingVertical="12dp"
+                    android:background="@color/color_213643"
+                    android:clipToPadding="false"
                     android:paddingHorizontal="8dp"
-                    android:clipToPadding="false"/>
+                    android:paddingVertical="12dp" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
