--- a/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
+++ b/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="32dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/color_161B28">
+    android:background="@color/color_213743">
 
     <TextView
         android:id="@+id/tvQuarter"
@@ -20,7 +20,7 @@
     <View
         android:layout_width="@dimen/margin_0.5"
         android:layout_height="match_parent"
-        android:background="@color/color_1A2334" />
+        android:background="@color/color_0C121E" />
 
     <TextView
         android:id="@+id/tvResult"
@@ -37,7 +37,7 @@
     <View
         android:layout_width="@dimen/margin_0.5"
         android:layout_height="match_parent"
-        android:background="@color/color_1A2334" />
+        android:background="@color/color_0C121E" />
 
     <TextView
         android:id="@+id/tvWinAmount"
