--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="92dp"
+    android:layout_height="124dp"
     android:layout_marginTop="1dp"
     android:paddingTop="16dp"
     android:paddingLeft="12dp"
-    android:background="@color/color_1A202E">
+    android:background="@color/color_213643">
     
     <View
         android:layout_width="0.5dp"
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="243dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/color_333A4C" />
+        android:background="@color/color_071824" />
 
     <ImageView
         android:id="@+id/ivHomeLogo"
@@ -37,8 +37,9 @@
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginTop="4dp"
         android:lineSpacingExtra="0dp"
+        android:textStyle="bold"
         android:gravity="center"
-        android:textColor="@color/color_BEC7DC"
+        android:textColor="@color/color_FFFFFF"
         android:textSize="12sp"
         android:maxLines="2"
         tools:text="Liaoning Flying Leopards"/>
@@ -76,8 +77,9 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:lineSpacingExtra="0dp"
+        android:textStyle="bold"
         android:gravity="center"
-        android:textColor="@color/color_BEC7DC"
+        android:textColor="@color/color_FFFFFF"
         android:textSize="12sp"
         android:maxLines="2"
         tools:text="Liaoning Flying Leopards"/>
@@ -91,7 +93,7 @@
         android:layout_marginEnd="19dp"
         android:gravity="center_horizontal"
         android:textSize="12sp"
-        android:textColor="@color/color_6D7693"
+        android:textColor="@color/color_638095"
         tools:text="Section 1 8:42"/>
 
     <TextView
@@ -121,5 +123,71 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="10sp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_24"
+        android:layout_marginBottom="@dimen/margin_12"
+        android:layout_marginRight="@dimen/margin_12"
+        app:layout_constraintBottom_toBottomOf="parent">
+       <LinearLayout
+           android:id="@+id/linHot"
+           android:layout_width="wrap_content"
+           android:layout_height="match_parent"
+           app:layout_constraintLeft_toLeftOf="parent"
+           android:gravity="center_vertical"
+           android:background="@drawable/bg_darkblue_radius_12_283d49"
+           android:paddingHorizontal="@dimen/margin_8">
+          <ImageView
+              android:layout_width="@dimen/margin_16"
+              android:layout_height="@dimen/margin_16"
+              android:src="@drawable/ic_endcard_fire"/>
+           <TextView
+               android:id="@+id/tvHotCount"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="@dimen/margin_4"
+               android:textColor="@color/color_1CD219"
+               android:textSize="@dimen/textSize12sp"
+               android:text="85"/>
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="@dimen/margin_4"
+               android:textColor="@color/color_638095"
+               android:textSize="@dimen/textSize12sp"
+               android:text="people are viewing card"/>
+
+       </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linRecord"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center_vertical"
+            android:background="@drawable/bg_darkblue_radius_12_283d49"
+            android:paddingHorizontal="@dimen/margin_8">
+            <ImageView
+                android:layout_width="@dimen/margin_16"
+                android:layout_height="@dimen/margin_16"
+                android:src="@drawable/ic_endcard_betrecord"/>
+            <TextView
+                android:id="@+id/tvBetCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_4"
+                android:textColor="@color/color_1CD219"
+                android:textSize="@dimen/textSize12sp"
+                android:text="85"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_4"
+                android:textColor="@color/color_638095"
+                android:textSize="@dimen/textSize12sp"
+                android:text="slots sold"/>
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
