--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -655,5 +655,22 @@
     <color name="color_0F212E">#0F212E</color>
     <color name="color_2F4553">#2F4553</color>
     <color name="color_213643">#213643</color>
+    <color name="color_8EAEC5">#8EAEC5</color>
+    <color name="color_3A586D">#3A586D</color>
+    <color name="color_1B2E39">#1B2E39</color>
+    <color name="color_3F5B6B">#3F5B6B</color>
+    <color name="color_CC302900">#CC302900</color>
+    <color name="color_00E701">#00E701</color>
+    <color name="color_415C6D">#415C6D</color>
+    <color name="color_355D73">#355D73</color>
+    <color name="color_1475E1">#1475E1</color>
+    <color name="color_003CD7">#003CD7</color>
+    <color name="color_2A4655">#2A4655</color>
+    <color name="color_233E4A">#233E4A</color>
+    <color name="color_071724">#071724</color>
+    <color name="color_142635">#142635</color>
+    <color name="color_52718B">#52718B</color>
+    <color name="color_728B9D">#728B9D</color>
+    <color name="color_283D49">#283D49</color>
 
 </resources>
