--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -656,5 +656,8 @@
     <color name="color_FF7676">#FF7676</color>
     <color name="color_404C71">#404C71</color>
     <color name="color_e3e5e9">#e3e5e9</color>
+    <color name="color_e0ecfc">#e0ecfc</color>
+    <color name="color_eed39f">#eed39f</color>
+    <color name="color_ff871f">#ff871f</color>
 
 </resources>
