--- a/app/src/main/res/layout/fragment_endcard_home.xml
+++ b/app/src/main/res/layout/fragment_endcard_home.xml
@@ -67,8 +67,8 @@
                 android:layout_width="@dimen/margin_20"
                 android:layout_height="@dimen/margin_20"
                 android:src="@drawable/ic_notice_yellow"/>
-            <com.luck.picture.lib.widget.MarqueeTextView
-                android:id="@+id/tvMarguee"
+            <org.cxct.sportlottery.view.AutoScrollRecyclerView
+                android:id="@+id/rcvMarquee"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_8"
