--- a/app/src/main/res/layout/activity_endcard.xml
+++ b/app/src/main/res/layout/activity_endcard.xml
@@ -139,4 +139,12 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <View
+        android:id="@+id/vShadow"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:elevation="100dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
