--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -147,13 +147,6 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4"
-               android:textColor="@color/color_1CD219"
-               android:textSize="@dimen/textSize12sp"
-               android:text="85"/>
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginLeft="@dimen/margin_4"
                android:textColor="@color/color_638095"
                android:textSize="@dimen/textSize12sp"
                android:text="people are viewing card"/>
@@ -176,16 +169,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_4"
-                android:textColor="@color/color_1CD219"
-                android:textSize="@dimen/textSize12sp"
-                android:text="85"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_4"
                 android:textColor="@color/color_638095"
                 android:textSize="@dimen/textSize12sp"
-                android:text="slots sold"/>
+                android:text="85 slots sold"/>
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
